--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "date-fns": "^2.30.0",
+    "gray-matter": "^4.0.3",
+    "next": "^13.4.12",
+    "path": "^0.12.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
