--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cache-posts": "node lib/cache.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm cache-posts && git add cache/data.js"
+    }
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "date-fns": "^2.30.0",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "^13.4.12",
     "path": "^0.12.7",
