Fix pre commit hook?import husky

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm cache-posts && git add cache/data.js"
+      "pre-commit": "npm run cache-posts && git add cache/data.js"
     }
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "husky": "^8.0.3",
     "next": "^13.4.12",
     "path": "^0.12.7",
     "postcss": "^8.4.27",
