--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "date-fns": "^2.30.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
-    "next": "^13.4.12",
+    "next": "^13.4.19",
     "path": "^0.12.7",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
@@ -24,5 +24,10 @@
     "fs": false,
     "os": false,
     "path": false
+  },
+  "devDependencies": {
+    "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
