--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -16,6 +16,8 @@ jobs:
       name: staging
       url: ${{ steps.deploy.outputs.url }}
     steps:
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1  
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
